Feat: 챌린지를 오늘의 날짜에 따라 랜덤으로 2개의 값을 리턴하게 로직 추가
- 어제의 기록 유무에 따라 챌린지 리스트 길이가 다르기 때문에 어제의 기록 유무에 따라 챌린지가 다른 값을 보여줌