@@ -8,7 +8,10 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
 
 import static com.dnd.runus.global.constant.TimeConstant.SERVER_TIMEZONE_ID;
 
@@ -26,15 +29,22 @@ public class ChallengeService {
                 .toOffsetDateTime();
         OffsetDateTime yesterday = todayMidnight.minusDays(1);
 
+        List<ChallengesResponse> challengesResponses;
         // 어제 기록이 없으면
         if (!runningRecordRepository.hasByMemberIdAndStartAtBetween(memberId, yesterday, todayMidnight)) {
-            return challengeRepository.findAllIsNotDefeatYesterday().stream()
+            challengesResponses = challengeRepository.findAllIsNotDefeatYesterday().stream()
                     .map(ChallengesResponse::from)
-                    .toList();
+                    .collect(Collectors.toList());
+        } else {
+            challengesResponses = challengeRepository.findAllChallenges().stream()
+                    .map(ChallengesResponse::from)
+                    .collect(Collectors.toList());
         }
 
-        return challengeRepository.findAllChallenges().stream()
-                .map(ChallengesResponse::from)
-                .toList();
+        // 랜덤으로 2개 리턴
+        Random randomWithSeed = new Random(todayMidnight.toEpochSecond());
+        Collections.shuffle(challengesResponses, randomWithSeed);
+
+        return challengesResponses.subList(0, 2);
     }
 }
